# telegram-ai-bot

./: .env.example  .gitignore  README.md  main.py  management_app.py  pyproject.toml  requirements.txt  test_openai_v2.py
assets/data/: characters.json
src/telegram_ai_bot/: __init__.py
src/telegram_ai_bot/config/: __init__.py  logging_config.py  settings.py
src/telegram_ai_bot/core/: __init__.py  application.py  bot.py
src/telegram_ai_bot/handlers/: __init__.py  callback_handler.py  command_handler.py  message_handler.py
src/telegram_ai_bot/models/: __init__.py  assistant.py  character.py  conversation.py  database.py  user.py
src/telegram_ai_bot/services/: __init__.py  assistant_service.py  character_service.py  conversation_service.py  user_service.py
src/telegram_ai_bot/utils/: __init__.py  helpers.py  validators.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_handlers.py  test_models.py  test_services.py  test_utils.py
